assets/styles/main.css
/* Font Imports */
@import url(../fonts/jetbrains.css);
@import url(../fonts/montserrat.css);
@import url(../fonts/poppins-tilt-warp.css);
@import url(../fonts/poppins.css);
@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique+B1&display=swap');


/* Component Imports */
@import url(headers.css);
@import url(input-group.css);
@import url(vars.css);

/* Scrollbar Styles */
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: var(--background);
}

::-webkit-scrollbar-thumb {
  background: var(--primaryContainer);
  border-radius: var(--radius-big);
  transition: background 0.2s;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--tertiary);
  cursor: grab;
}

::-webkit-scrollbar-thumb:active {
  cursor: grabbing;
}

/* Console-specific Scrollbar */
/* Scrollbar Styles */
.console::-webkit-scrollbar {
  width: 20px;

}

.console::-webkit-scrollbar-track {
  background: var(--onSecondary);
  background-clip: content-box;
  border: 7px solid transparent;
  border-radius: var(--radius-big);
}

.console::-webkit-scrollbar-thumb {
  background: var(--secondary);
  background-clip: content-box;
  border: 7px solid transparent;
}

.console::-webkit-scrollbar-thumb:hover {
  background: var(--tertiary);
  background-clip: content-box;
  border: 7px solid transparent;
}

::-moz-selection { 
  color: var(--onError);
  background: var(--error);
}

::selection {
  color: var(--onError);
  background: var(--error);
}

/* Global Styles */
* {
  box-sizing: border-box;
}

body {
  font-family: poppins;
  font-size: 16px;
  margin: 0;
  padding: 0;
  background-color: var(--background);
}

html {
  scroll-behavior: smooth;
}

hr {
  border: 1px solid var(--primary);
}

/* Link Styles */
.link {
  color: var(--error);
  text-decoration: none;
  padding: 3px;
  margin: -3px;
  border-radius: var(--radius-sml);
  transition: color 0.1s, background-color 0.1s;
}

.link:hover {
  color: var(--background);
  background-color: var(--secondary);
}

p {
  color: var(--onBackground);
}

/* Main Section Styles */
main {
  padding-left: 25vw;
  padding-right: 25vw;
}

@media screen and (max-width: 1350px) {
  main {
    padding-left: 10vw;
    padding-right: 10vw;
  }
}

@media screen and (max-width: 850px) {
  main {
    padding-left: 2vw;
    padding-right: 2vw;
  }
}

/* Headings */
h1 {
  font-family: 'Tilt Warp', cursive;
  color: var(--primary);
  font-size: 2rem;
  padding-left: 10px;
}

h2, h3 {
  color: var(--onBackground);
  font-weight: 50;
}

/* Collapsible Content */
.collapsible {
  cursor: pointer;
  background-color: var(--primary);
  font-size: 17px;
  font-family: poppins;
  font-weight: var(--font-weight-coll);
  border-radius: var(--radius-big);
  color: var(--onPrimary);
  width: 100%;
  text-align: left;
  transition: background-color 0.1s, color 0.1s;
  margin-bottom: 3px;
  padding: 13px 30px;
  transition: 0.1s;
}

.collapsible span {
  display: inline-block;
  width: 95%;
}

.collapsible:hover,
.active {
  background-color: var(--tertiary);
  color: var(--onTertiary);
}

.collapsible:active {
  border-radius: var(--radius-sml);
}

.open {
  border-radius: var(--radius-med) var(--radius-med) var(--radius-sml) var(--radius-sml);
}

.closed {
  border-radius: var(--radius-big);
}

.collapsible:after {
  content: '\002B';
  color: var(--onPrimary);
  font-weight: var(--font-weight-coll-content);
  float: right;
  transition: content 0.2s;
}

.active:after {
  content: '\2212';
}

.content {
  padding: 0 18px;
  max-height: 0;
  width: 100%;
  overflow: hidden;
  border-radius: var(--radius-big);
  transition: max-height 0.2s ease-out;
  background-color: var(--secondaryContainer);
  color: var(--onSecondaryContainer);
  margin-bottom: 5px;
}

.content ol {
  margin: 0;
  padding: 5px 25px;
  font-weight: var(--font-weight-coll-content);
}

.content b {
  font-weight: 100;
  color: var(--error);
}

.c-open {
  border-radius: var(--radius-sml) var(--radius-sml) var(--radius-med) var(--radius-med);
}

.c-closed {
  border-radius: var(--radius-big);
}

.content p {
  font-weight: var(--font-weight-coll-content);
}

/* Console */
.console {
  position: relative;
  background-color: var(--background);
  border-radius: var(--radius-med);
  height: 23vh;
  margin-bottom: 5px;
  overflow-y: auto;
  display: flex;
  flex-direction: column-reverse;
  padding: 15px;
  font-family: "JetBrains Mono", monospace;
}

.console p {
  font-size: 12px;
  color: var(--onBackground);
  margin: 0;
}

.console b {
  color: var(--primary);
}

.console h3 {
  font-weight: 50;
  margin: 0;
}

.console .red {
  color: var(--error);
}

.red {
  color: var(--error);
}

/* Content Box */
.content-box {
  font-family: poppins;
  transition: 0.3s ease-in-out;
  margin-top: 2vh;
}

/* Footer */
footer {
  margin-top: 25px;
  background-color: var(--secondaryContainer);
  padding: 5vh;
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

footer .copywrite,
footer .info {
  text-align: center;
  color: var(--onSecondaryContainer);
  margin: 0;
}

footer img {
  padding-left: 15vw;
  padding-right: 15vw;
}

@media screen and (max-width: 650px) {
  footer img {
    padding-left: 2vw;
    padding-right: 2vw;
  }
}

/* Message Box */
.message-box {
  background-color: var(--secondary);
  border-radius: var(--radius-big);
  margin-bottom: 5px;
  padding: 15px;
}

.message-box h2 {
  color: var(--error);
  margin: 0;
}

.message-box p {
  color: var(--onBackground);
  font-size: 20px;
}

.message-box button {
  width: 100%;
  border: 2px solid var(--error);
  color: var(--error);
  background-color: var(--secondary);
  border-radius: var(--radius-med);
  transition: background-color 0.2s, color 0.2s;
}

.message-box button:hover {
  background-color: var(--error);
  color: var(--background);
}

.message-box .double-button {
  margin-bottom: -15px;
}

.message-box .double-button button {
  width: 49.66%;
}

.form-box {
  background-color: var(--secondaryContainer);
  border-radius: var(--radius-med);
  padding: 2vw;
}

@media screen and (max-width: 850px) {
  .form-box {
    padding: 5vw;
  }
}

.form-box hr {
  border: 1px var(--background) solid;
}

a {
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
}

/* Error Box */
.error-box {
  background-color: #FF4545;
  border-radius: var(--radius-big);
  padding: 20px;
  position: fixed;
  z-index: 10;
  top: 30%;
  margin: 20px;
}

